cmake_minimum_required(VERSION 3.20)
project(GraphMini)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -fno-omit-frame-pointer")
if(APPLE)
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -mno-omit-leaf-frame-pointer")
    set(OpenMP_C "${CMAKE_C_COMPILER}")
    set(OpenMP_C_FLAGS "-Xclang -fopenmp -I/usr/local/opt/libomp/include")
    set(OpenMP_C_LIB_NAMES "libomp")
    set(OpenMP_libomp_LIBRARY "omp")

    set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
    set(OpenMP_CXX_FLAGS "-Xclang -fopenmp -I/usr/local/opt/libomp/include")
    set(OpenMP_CXX_LIB_NAMES "libomp")
    set(OpenMP_libomp_LIBRARY "omp")
    link_directories("/usr/local/opt/libomp/lib/")
    include_directories("usr/local/opt/libomp/include")
endif()
add_subdirectory(dependency/GraphPi EXCLUDE_FROM_ALL)
add_subdirectory(dependency/cxxopts EXCLUDE_FROM_ALL)
add_subdirectory(dependency/oneTBB EXCLUDE_FROM_ALL)
add_subdirectory(dependency/fmt EXCLUDE_FROM_ALL)
find_package(MPI REQUIRED)
find_package(OpenMP REQUIRED)

set(PROJECT_PROFILE_DIR "${PROJECT_SOURCE_DIR}/profile/")
set(PROJECT_LOG_DIR "${PROJECT_SOURCE_DIR}/log/")
set(PROJECT_PLAN_DIR "${PROJECT_SOURCE_DIR}/plan/")

configure_file(include/configure.h.in ${PROJECT_BINARY_DIR}/configure/configure.h)
message("PROJECT_BINARY_DIR: " ${PROJECT_BINARY_DIR})
message("PROJECT_SOURCE_DIR: " ${PROJECT_SOURCE_DIR})
message("CMAKE_CXX_FLAGS_DEBUG: " ${CMAKE_CXX_FLAGS_DEBUG})
message("CMAKE_CXX_FLAGS_RELEASE: " ${CMAKE_CXX_FLAGS_RELEASE})
include_directories(${PROJECT_BINARY_DIR}/configure)
include_directories(include)
add_subdirectory(src)
